--- a/machine/raspix-aarch64/system/drivers/usbd/Makefile
+++ b/machine/raspix-aarch64/system/drivers/usbd/Makefile
@@ -15,8 +15,8 @@ USBD = $(TARGET_DIR)/drivers/raspix/usbd
 $(USBD): $(USBD_OBJS) \
 		$(EWOK_LIBC_A)  \
 		$(BUILD_DIR)/lib/libarch_bcm283x.a \
-		lib/libcsud.a
-	$(LD) -Ttext=100 $(USBD_OBJS) -o $(USBD) $(LDFLAGS) -larch_bcm283x $(EWOK_LIBC) -lcsud $(EWOK_LIBC)
+		lib/libcsud_aarch64.a
+	$(LD) -Ttext=100 $(USBD_OBJS) -o $(USBD) $(LDFLAGS) -larch_bcm283x $(EWOK_LIBC) -lcsud_aarch64 $(EWOK_LIBC)
 
 clean:
 	rm -f $(USBD_OBJS)
