move clock app to ewokos system default project

--- a/system/xwin/apps/xDemo/Makefile
+++ b/system/xwin/apps/xDemo/Makefile
@@ -8,10 +8,10 @@ LDFLAGS = -L$(BUILD_DIR)/lib
 
 CXXFLAGS += -I $(BUILD_DIR)/include
 
-TASK_OBJS = widgetDemo.o
+TASK_OBJS = xDemo.o
 
-TASK_DIR = $(TARGET_DIR)/apps/widgetDemo
-TASK = $(TASK_DIR)/widgetDemo
+TASK_DIR = $(TARGET_DIR)/apps/xDemo
+TASK = $(TASK_DIR)/xDemo
 
 all: $(TASK_DIR) $(TASK)
 
@@ -20,7 +20,6 @@ $(TASK): $(TASK_OBJS) \
 		$(BUILD_DIR)/lib/libx++.a \
 		$(BUILD_DIR)/lib/libx.a \
 		$(BUILD_DIR)/lib/libfont.a \
-		$(BUILD_DIR)/lib/libwidget++.a \
 		$(BUILD_DIR)/lib/libewokstl.a \
 		$(BUILD_DIR)/lib/libcxx.a 
 	$(LD) -Ttext=100 $(TASK_OBJS) -o $(TASK) $(LDFLAGS) $(EWOK_LIB_X) $(EWOK_LIB_GRAPH) $(EWOK_LIBC) -lcxx
