--- a/system/xwin/apps/Makefile
+++ b/system/xwin/apps/Makefile
@@ -7,7 +7,9 @@ all:
 	cd xfinder; make
 	cd xpng; make
 	cd xprocs; make
+	cd xDemo; make
 	cd widgetDemo; make
+	cd clock; make
 
 clean:
 	cd xterm; make clean
@@ -18,4 +20,6 @@ clean:
 	cd xfinder; make clean
 	cd xpng; make clean
 	cd xprocs; make clean
+	cd xDemo; make clean
 	cd widgetDemo; make clean
+	cd clock; make clean
