--- a/system/xwin/apps/clock/Makefile
+++ b/system/xwin/apps/clock/Makefile
@@ -8,10 +8,10 @@ LDFLAGS = -L$(BUILD_DIR)/lib
 
 CXXFLAGS += -I $(BUILD_DIR)/include
 
-TASK_OBJS = widgetDemo.o
+TASK_OBJS = clock.o
 
-TASK_DIR = $(TARGET_DIR)/apps/widgetDemo
-TASK = $(TASK_DIR)/widgetDemo
+TASK_DIR = $(TARGET_DIR)/apps/clock
+TASK = $(TASK_DIR)/clock
 
 all: $(TASK_DIR) $(TASK)
 
@@ -20,8 +20,8 @@ $(TASK): $(TASK_OBJS) \
 		$(BUILD_DIR)/lib/libx++.a \
 		$(BUILD_DIR)/lib/libx.a \
 		$(BUILD_DIR)/lib/libfont.a \
-		$(BUILD_DIR)/lib/libwidget++.a \
 		$(BUILD_DIR)/lib/libewokstl.a \
+		$(BUILD_DIR)/lib/libwidget++.a \
 		$(BUILD_DIR)/lib/libcxx.a 
 	$(LD) -Ttext=100 $(TASK_OBJS) -o $(TASK) $(LDFLAGS) $(EWOK_LIB_X) $(EWOK_LIB_GRAPH) $(EWOK_LIBC) -lcxx
 
