--- a/machine/raspix/system/Makefile
+++ b/machine/raspix/system/Makefile
@@ -5,6 +5,10 @@ ifeq ($(ARCH),)
 export ARCH=aarch64
 endif
 
+ifeq ($(ARCH),arm)
+export ARCH_VER=v7
+endif
+
 
 EWOKOS_ROOT_DIR = ../../..
 SYS_ROOT_DIR = $(EWOKOS_ROOT_DIR)/system
