--- a/system/xwin/drivers/xserverd/Makefile
+++ b/system/xwin/drivers/xserverd/Makefile
@@ -8,7 +8,12 @@ LDFLAGS = -L$(BUILD_DIR)/lib
 
 CFLAGS += -I $(BUILD_DIR)/include -I./
 
-XSERVERD_OBJS = xserverd.o  cursor.o xevtpool.o xcmd.o xtheme.o
+XSERVERD_OBJS = xserverd.o \
+	cursor.o \
+	xevtpool.o \
+	xcmd.o \
+	bgeffect.o \
+	xtheme.o
 
 XSERVERD = $(TARGET_DIR)/drivers/xserverd
 
