--- a/system/xwin/apps/Makefile
+++ b/system/xwin/apps/Makefile
@@ -8,7 +8,7 @@ all:
 	cd xpng; make
 	cd xprocs; make
 	cd xDemo; make
-	cd widgetDemo; make
+	cd wDemo; make
 	cd clock; make
 
 clean:
@@ -21,5 +21,5 @@ clean:
 	cd xpng; make clean
 	cd xprocs; make clean
 	cd xDemo; make clean
-	cd widgetDemo; make clean
+	cd wDemo; make clean
 	cd clock; make clean
