--- a/system/xwin/apps/wDemo/Makefile
+++ b/system/xwin/apps/wDemo/Makefile
@@ -8,10 +8,10 @@ LDFLAGS = -L$(BUILD_DIR)/lib
 
 CXXFLAGS += -I $(BUILD_DIR)/include
 
-TASK_OBJS = widgetDemo.o
+TASK_OBJS = wDemo.o
 
-TASK_DIR = $(TARGET_DIR)/apps/widgetDemo
-TASK = $(TASK_DIR)/widgetDemo
+TASK_DIR = $(TARGET_DIR)/apps/wDemo
+TASK = $(TASK_DIR)/wDemo
 
 all: $(TASK_DIR) $(TASK)
 
