--- a/system/xwin/libs/widget++/Makefile
+++ b/system/xwin/libs/widget++/Makefile
@@ -38,6 +38,7 @@ LIB_WIDGET_OBJS =  src/Widget/Widget.o \
 		src/WidgetEx/FontDialog.o \
 		src/WidgetEx/ColorDialog.o \
 		src/WidgetEx/Popup.o \
+		src/WidgetEx/LayoutWidget.o \
 		src/WidgetEx/Menu.o \
 		src/WidgetEx/Menubar.o
 
