--- a/system/xwin/apps/Makefile
+++ b/system/xwin/apps/Makefile
@@ -9,6 +9,7 @@ all:
 	cd xprocs; make
 	cd xDemo; make
 	cd wDemo; make
+	cd xtheme; make
 	cd clock; make
 
 clean:
@@ -22,4 +23,5 @@ clean:
 	cd xprocs; make clean
 	cd xDemo; make clean
 	cd wDemo; make clean
+	cd xtheme; make clean
 	cd clock; make clean
