virtual global keyboard

--- a/system/xwin/drivers/Makefile
+++ b/system/xwin/drivers/Makefile
@@ -4,7 +4,9 @@ all: drivers
 drivers:
 	cd xserverd;make
 	cd vjoystickd;make
+	cd vkeybd;make
 
 clean:
 	cd xserverd;make clean
 	cd vjoystickd;make clean
+	cd vkeybd;make clean
