--- a/machine/raspix/system/drivers/usbd.touch/Makefile
+++ b/machine/raspix/system/drivers/usbd.touch/Makefile
@@ -10,7 +10,7 @@ CFLAGS += -I $(BUILD_DIR)/include -Iinclude
 
 USBD_OBJS = usbd.o
 
-USBD = $(TARGET_DIR)/drivers/raspix/usbd
+USBD = $(TARGET_DIR)/drivers/raspix/usbd.touch
 
 $(USBD): $(USBD_OBJS) \
 		$(EWOK_LIBC_A)  \
@@ -19,4 +19,4 @@ $(USBD): $(USBD_OBJS) \
 	$(LD) -Ttext=100 $(USBD_OBJS) -o $(USBD) $(LDFLAGS) -larch_bcm283x $(EWOK_LIBC) -lcsud_$(ARCH) $(EWOK_LIBC)
 
 clean:
-	rm -f $(USBD_OBJS)
+	rm -f $(USBD_OBJS) $(USBD)
