display dev manage

--- a/machine/versatilepb/system/drivers/fbd/Makefile
+++ b/machine/versatilepb/system/drivers/fbd/Makefile
@@ -19,7 +19,7 @@ $(FBD): $(FBD_OBJS) \
 		$(BUILD_DIR)/lib/libtinyjson.a \
 		$(BUILD_DIR)/lib/libfbd.a \
 		$(BUILD_DIR)/lib/libarch_vpb.a
-	$(LD) -Ttext=100 $(FBD_OBJS) -o $(FBD) $(LDFLAGS) -lgterminal -ltextgrid -lfb -lfbd -ldisplay -ltinyjson $(EWOK_LIB_GRAPH) $(EWOK_LIBC)
+	$(LD) -Ttext=100 $(FBD_OBJS) -o $(FBD) $(LDFLAGS) -lgterminal -ltextgrid -lfbd -ltinyjson $(EWOK_LIB_GRAPH) $(EWOK_LIBC)
 
 clean:
 	rm -f $(FBD_OBJS)
