--- a/machine/raspix/system/libs/bsp/Makefile
+++ b/machine/raspix/system/libs/bsp/Makefile
@@ -11,7 +11,7 @@ CFLAGS += -I$(SYS_DIR)/basic/libc/libewoksys/ewoksys/include \
 	-I$(SYS_DIR)/basic/libs/gpio/include \
 	-Iinclude -I $(TARGET_DIR)/include
 
-LIB_BSP_OBJS = src/bsp_sd.o src/bsp_fb.o src/bsp_gpio.o
+LIB_BSP_OBJS = src/bsp_sd.o src/bsp_fb.o src/bsp_gpio.o src/bsp_spi.o
 
 BSP = $(TARGET_DIR)/lib/libbsp.a
 
