--- a/machine/raspix/system/Makefile
+++ b/machine/raspix/system/Makefile
@@ -18,7 +18,7 @@ BUILD_DIR = $(SYS_ROOT_DIR)/build/$(HW)
 MACHINE_BUILD_DIR = build
 TARGET_DIR = $(BUILD_DIR)/rootfs
 
-export BSP_LFLAGS= -larch_bcm283x
+export BSP_LFLAGS= -lbsp -larch_bcm283x
 
 all: x
 	@echo "all done."
