--- a/machine/versatilepb/system/Makefile
+++ b/machine/versatilepb/system/Makefile
@@ -10,7 +10,7 @@ BUILD_DIR = $(SYS_ROOT_DIR)/build/$(HW)
 MACHINE_BUILD_DIR = build
 TARGET_DIR = $(BUILD_DIR)/rootfs
 
-export BSP_LFLAGS = -larch_vpb
+export BSP_LFLAGS = -lbsp -larch_vpb
 
 all: x
 	@echo "all done."
