--- a/machine/raspix/system/drivers/Makefile
+++ b/machine/raspix/system/drivers/Makefile
@@ -2,7 +2,7 @@ basic:
 	cd uartd; make
 	cd soundd; make
 	cd usbd; make
-#	cd usbd.touch; make
+	cd usbd.touch; make
 	cd hid_keybd; make
 	cd hid_moused; make
 	cd hid_joystickd; make
@@ -17,7 +17,7 @@ clean:
 	cd fbd; make clean
 	cd soundd; make clean
 	cd usbd; make clean
-#	cd usbd.touch; make clean
+	cd usbd.touch; make clean
 	cd hid_keybd; make clean
 	cd hid_moused; make clean
 	cd hid_joystickd; make clean
