--- a/system/gui/bin/aplay/Makefile
+++ b/system/gui/bin/aplay/Makefile
@@ -10,7 +10,7 @@ CFLAGS += -I $(BUILD_DIR)/include
 
 CAT_OBJS = aplay.o utils.o pcm.o
 
-CAT = $(TARGET_DIR)/bin/pcmplayer
+CAT = $(TARGET_DIR)/bin/wavplayer
 
 $(CAT): $(CAT_OBJS) \
 		$(EWOK_LIBC_A) 
