--- a/system/gui/bin/Makefile
+++ b/system/gui/bin/Makefile
@@ -3,12 +3,12 @@ all: builtin_apps
 
 builtin_apps:
 	cd fbtest;make
-	cd aplay;make
+	cd wavplayer;make
 	cd stl_test;make
 	cd load_font;make
 
 clean:
 	cd fbtest;make clean
-	cd aplay;make clean
+	cd wavplayer;make clean
 	cd stl_test;make clean
 	cd load_font;make clean
