--- a/system/gui/bin/Makefile
+++ b/system/gui/bin/Makefile
@@ -4,11 +4,13 @@ all: builtin_apps
 builtin_apps:
 	cd fbtest;make
 	cd wavplayer;make
+	cd mp3player;make
 	cd stl_test;make
 	cd load_font;make
 
 clean:
 	cd fbtest;make clean
 	cd wavplayer;make clean
+	cd mp3player;make clean
 	cd stl_test;make clean
 	cd load_font;make clean
