--- a/machine/virt/kernel/vm.dts
+++ b/machine/virt/kernel/vm.dts
@@ -1,7 +1,7 @@
 /dts-v1/;
 
 / {
-	interrupt-parent = <0x8002>;
+	interrupt-parent = <0x8005>;
 	dma-coherent;
 	model = "linux,dummy-virt";
 	#size-cells = <0x02>;
@@ -23,7 +23,7 @@
 	};
 
 	platform-bus@c000000 {
-		interrupt-parent = <0x8002>;
+		interrupt-parent = <0x8005>;
 		ranges = <0x00 0x00 0xc000000 0x2000000>;
 		#address-cells = <0x01>;
 		#size-cells = <0x01>;
@@ -264,14 +264,14 @@
 		compatible = "gpio-keys";
 
 		poweroff {
-			gpios = <0x8004 0x03 0x00>;
+			gpios = <0x8007 0x03 0x00>;
 			linux,code = <0x74>;
 			label = "GPIO Key Poweroff";
 		};
 	};
 
 	pl061@9030000 {
-		phandle = <0x8004>;
+		phandle = <0x8007>;
 		clock-names = "apb_pclk";
 		clocks = <0x8000>;
 		interrupts = <0x00 0x07 0x04>;
@@ -283,11 +283,11 @@
 
 	pcie@10000000 {
 		interrupt-map-mask = <0x1800 0x00 0x00 0x07>;
-		interrupt-map = <0x00 0x00 0x00 0x01 0x8002 0x00 0x00 0x00 0x03 0x04 0x00 0x00 0x00 0x02 0x8002 0x00 0x00 0x00 0x04 0x04 0x00 0x00 0x00 0x03 0x8002 0x00 0x00 0x00 0x05 0x04 0x00 0x00 0x00 0x04 0x8002 0x00 0x00 0x00 0x06 0x04 0x800 0x00 0x00 0x01 0x8002 0x00 0x00 0x00 0x04 0x04 0x800 0x00 0x00 0x02 0x8002 0x00 0x00 0x00 0x05 0x04 0x800 0x00 0x00 0x03 0x8002 0x00 0x00 0x00 0x06 0x04 0x800 0x00 0x00 0x04 0x8002 0x00 0x00 0x00 0x03 0x04 0x1000 0x00 0x00 0x01 0x8002 0x00 0x00 0x00 0x05 0x04 0x1000 0x00 0x00 0x02 0x8002 0x00 0x00 0x00 0x06 0x04 0x1000 0x00 0x00 0x03 0x8002 0x00 0x00 0x00 0x03 0x04 0x1000 0x00 0x00 0x04 0x8002 0x00 0x00 0x00 0x04 0x04 0x1800 0x00 0x00 0x01 0x8002 0x00 0x00 0x00 0x06 0x04 0x1800 0x00 0x00 0x02 0x8002 0x00 0x00 0x00 0x03 0x04 0x1800 0x00 0x00 0x03 0x8002 0x00 0x00 0x00 0x04 0x04 0x1800 0x00 0x00 0x04 0x8002 0x00 0x00 0x00 0x05 0x04>;
+		interrupt-map = <0x00 0x00 0x00 0x01 0x8005 0x00 0x00 0x00 0x03 0x04 0x00 0x00 0x00 0x02 0x8005 0x00 0x00 0x00 0x04 0x04 0x00 0x00 0x00 0x03 0x8005 0x00 0x00 0x00 0x05 0x04 0x00 0x00 0x00 0x04 0x8005 0x00 0x00 0x00 0x06 0x04 0x800 0x00 0x00 0x01 0x8005 0x00 0x00 0x00 0x04 0x04 0x800 0x00 0x00 0x02 0x8005 0x00 0x00 0x00 0x05 0x04 0x800 0x00 0x00 0x03 0x8005 0x00 0x00 0x00 0x06 0x04 0x800 0x00 0x00 0x04 0x8005 0x00 0x00 0x00 0x03 0x04 0x1000 0x00 0x00 0x01 0x8005 0x00 0x00 0x00 0x05 0x04 0x1000 0x00 0x00 0x02 0x8005 0x00 0x00 0x00 0x06 0x04 0x1000 0x00 0x00 0x03 0x8005 0x00 0x00 0x00 0x03 0x04 0x1000 0x00 0x00 0x04 0x8005 0x00 0x00 0x00 0x04 0x04 0x1800 0x00 0x00 0x01 0x8005 0x00 0x00 0x00 0x06 0x04 0x1800 0x00 0x00 0x02 0x8005 0x00 0x00 0x00 0x03 0x04 0x1800 0x00 0x00 0x03 0x8005 0x00 0x00 0x00 0x04 0x04 0x1800 0x00 0x00 0x04 0x8005 0x00 0x00 0x00 0x05 0x04>;
 		#interrupt-cells = <0x01>;
 		ranges = <0x1000000 0x00 0x00 0x00 0x3eff0000 0x00 0x10000 0x2000000 0x00 0x10000000 0x00 0x10000000 0x00 0x2eff0000>;
 		reg = <0x00 0x3f000000 0x00 0x1000000>;
-		msi-map = <0x00 0x8003 0x00 0x10000>;
+		msi-map = <0x00 0x8006 0x00 0x10000>;
 		dma-coherent;
 		bus-range = <0x00 0x0f>;
 		linux,pci-domain = <0x00>;
@@ -314,12 +314,12 @@
 	};
 
 	pmu {
-		interrupts = <0x01 0x07 0x104>;
+		interrupts = <0x01 0x07 0xf04>;
 		compatible = "arm,armv8-pmuv3";
 	};
 
 	intc@8000000 {
-		phandle = <0x8002>;
+		phandle = <0x8005>;
 		reg = <0x00 0x8000000 0x00 0x10000 0x00 0x8010000 0x00 0x10000>;
 		compatible = "arm,cortex-a15-gic";
 		ranges;
@@ -329,7 +329,7 @@
 		#interrupt-cells = <0x03>;
 
 		v2m@8020000 {
-			phandle = <0x8003>;
+			phandle = <0x8006>;
 			reg = <0x00 0x8020000 0x00 0x1000>;
 			msi-controller;
 			compatible = "arm,gic-v2m-frame";
@@ -353,6 +353,18 @@
 				cluster0 {
 
 					core0 {
+						cpu = <0x8004>;
+					};
+
+					core1 {
+						cpu = <0x8003>;
+					};
+
+					core2 {
+						cpu = <0x8002>;
+					};
+
+					core3 {
 						cpu = <0x8001>;
 					};
 				};
@@ -360,15 +372,40 @@
 		};
 
 		cpu@0 {
-			phandle = <0x8001>;
+			phandle = <0x8004>;
 			reg = <0x00>;
-			compatible = "arm,cortex-a53";
+			enable-method = "psci";
+			compatible = "arm,cortex-a76";
+			device_type = "cpu";
+		};
+
+		cpu@1 {
+			phandle = <0x8003>;
+			reg = <0x01>;
+			enable-method = "psci";
+			compatible = "arm,cortex-a76";
+			device_type = "cpu";
+		};
+
+		cpu@2 {
+			phandle = <0x8002>;
+			reg = <0x02>;
+			enable-method = "psci";
+			compatible = "arm,cortex-a76";
+			device_type = "cpu";
+		};
+
+		cpu@3 {
+			phandle = <0x8001>;
+			reg = <0x03>;
+			enable-method = "psci";
+			compatible = "arm,cortex-a76";
 			device_type = "cpu";
 		};
 	};
 
 	timer {
-		interrupts = <0x01 0x0d 0x104 0x01 0x0e 0x104 0x01 0x0b 0x104 0x01 0x0a 0x104>;
+		interrupts = <0x01 0x0d 0xf04 0x01 0x0e 0xf04 0x01 0x0b 0xf04 0x01 0x0a 0xf04>;
 		always-on;
 		compatible = "arm,armv8-timer", "arm,armv7-timer";
 	};
@@ -387,7 +424,7 @@
 
 	chosen {
 		stdout-path = "/pl011@9000000";
-		rng-seed = <0x6250f33d 0x7c0e2783 0xcaab6082 0x689cdd1a 0x7763068e 0x68832d53 0xacb2e820 0xe9155d04>;
-		kaslr-seed = <0x148cbe68 0x7a95d92>;
+		rng-seed = <0xe8ea4955 0x1496e49b 0x2f56e8d8 0x24c6ad4b 0x367beed6 0xd556b635 0xc85d888f 0x5bb537cb>;
+		kaslr-seed = <0x332fd616 0x160951d0>;
 	};
 };
