add support keyboard@virt

--- a/machine/virt/system/drivers/Makefile
+++ b/machine/virt/system/drivers/Makefile
@@ -4,8 +4,10 @@ basic:
 gui:
 	cd fbd; make
 	cd moused; make
+	cd keybd; make
 
 clean:	
 	cd ttyd; make clean
 	cd fbd; make clean
 	cd moused; make clean
+	cd keybd; make clean
