add support virtfs 9p

--- a/machine.virt/system/drivers/Makefile
+++ b/machine.virt/system/drivers/Makefile
@@ -1,5 +1,6 @@
 basic: 
 	cd ttyd; make
+	cd virtfsd; make
 
 gui:
 	cd fbd; make
@@ -8,6 +9,7 @@ gui:
 
 clean:	
 	cd ttyd; make clean
+	cd virtfsd; make clean
 	cd fbd; make clean
 	cd moused; make clean
 	cd keybd; make clean
