add support virtfs-9p

--- a/machine.virt/kernel/Makefile
+++ b/machine.virt/kernel/Makefile
@@ -39,7 +39,7 @@ QEMU_ARGS += -kernel $(OS_IMG)
 QEMU_ARGS += -drive file=$(SYS_DIR)/root_$(ARCH).ext2,format=raw,id=blk0,if=none -device virtio-blk-device,drive=blk0
 QEMU_ARGS += -device virtio-mouse-device 
 QEMU_ARGS += -device virtio-keyboard-device
-QEMU_ARGS += -fsdev local,id=fsdev0,path=$(SYS_DIR),security_model=none -device virtio-9p-device,fsdev=fsdev0,mount_tag=hostshare
+QEMU_ARGS += -fsdev local,id=fsdev0,path=$(HOME),security_model=none -device virtio-9p-device,fsdev=fsdev0,mount_tag=hostshare
 
 asm:
 	$(OBJDUMP) -D $(BUILD_DIR)/$(OS_ELF) > $(BUILD_DIR)/kernel.asm
