--- a/system/xwin/bin/Makefile
+++ b/system/xwin/bin/Makefile
@@ -1,13 +1,11 @@
 all:
 	cd xlauncher; make
-	cd memubar; make
+	cd statusbar; make
 	cd xsession; make
 	cd xfont; make
-	cd xtheme; make
 
 clean:
 	cd xlauncher; make clean
-	cd memubar; make clean
+	cd statusbar; make clean
 	cd xsession; make clean
 	cd xfont; make clean
-	cd xtheme; make clean
